# CfDnsSync

./: .gitignore  Dockerfile  README.md  cloudflare-ddns.py  noxfile.py  pyproject.toml
.devcontainer/: recommended-Dockerfile  recommended-devcontainer.json
.github/: FUNDING.yml  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: branching.yml  check-version.yml  ci.yaml  ci.yml  release.yml
cfdnssync/: __main__.py  cli.py  cloudflare-ddns.py  cloudflare_api.py  config.default.yml  config.py  console.py  factory.py  logging.py  path.py  sync.py  version.py  zones.py
cfdnssync/commands/: bug_report.py  info.py  sync.py  update.py  zones.py
cfdnssync/commands/list/: cf_records.py  local_records.py
cfdnssync/decorators/: measure_time.py
cfdnssync/logger/: filter.py
cfdnssync/util/: get_ip.py  packaging.py  versions.py
configs/: .gitignore  config.yml.template
docker/root/etc/cont-init.d/: 11-cron
zones/: example.com.yml
