[tool.poetry]
name = "cloudflare-ddns"
version = "1.0.0"
description = "A Dynamic DNS updater for cloudflare"
authors = ["Steven Marks <marksie1988@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
keywords = ["cloudflare", "ddns", "dynamic", "dns"]
homepage = "https://github.com/totaldebug/cloudflare-dns"
repository = "https://github.com/totaldebug/cloudflare-dns"
documentation = "https://docs.totaldebug.uk/pyarr"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.21.0"
PyYAML = "^5.3.1"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
flake8 = "^3.8.4"

[tool.black]
line-length = 88
target_version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
