[tool.poetry]
name = "CfDnsSync"
version = "2.0.0"
description = "A Dynamic DNS updater for cloudflare"
authors = ["Steven Marks <marksie1988@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
keywords = ["cloudflare", "ddns", "dynamic", "dns"]
homepage = "https://github.com/totaldebug/CfDnsSync"
repository = "https://github.com/totaldebug/CfDnsSync"
documentation = "https://docs.totaldebug.uk/CfDnsSync"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.21.0"
PyYAML = "^5.3.1"
click = "^8.1.3"
rich = "^12.6.0"
appdirs = "^1.4.4"
cloudflare = "^2.10.3"
tqdm = "^4.64.1"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
flake8 = "^3.8.4"

[tool.poetry.group.dev.dependencies]
nox = "^2022.8.7"

[tool.black]
line-length = 88
target_version = ['py310']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
